# Phoneme-Mask

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
glad/include/glad/: glad.h
glad/src/: glad.c
scripts/: extract_vertices.py  extract_vertices_edges.py
src/: animation.cpp  animation.h  camera.cpp  camera.h  main.cpp  main_web.cpp  vertex.cpp  vertex.h
web/: index.js  index.wasm
